[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/cursor.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/scope.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Shooting"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("part_1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("part_4:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 2, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("part_2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 2, 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("part_3:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 2, 1, 0 ]
}

[node name="cursor" type="Node2D"]
pause_mode = 2
light_mask = 0
z_index = 1000
z_as_relative = false
script = ExtResource( 1 )

[node name="part_1" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 7

[node name="part_2" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_v = true
hframes = 7

[node name="part_3" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true
flip_v = true
hframes = 7

[node name="part_4" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true
hframes = 7

[node name="animation" type="AnimationPlayer" parent="."]
anims/Shooting = SubResource( 1 )
